# full-stack-dev-playground

./: .env  .env.example  Cargo.toml  Dockerfile
migrations/: 001_create_users_and_tasks.sql
src/: db.rs  lib.rs  main.rs  models.rs
src/handlers/: auth.rs  tasks.rs
